Basic launch GUI. Also serving mechanims.